--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "framer-motion": "^12.16.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
-    "react": "^19",
+    "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
